tests/compile-fail/tracked_impl_incompatibles.stderr
error: `return_ref` option not allowed here
 --> tests/compile-fail/tracked_impl_incompatibles.rs:9:18
  |
9 | #[salsa::tracked(return_ref)]
  |                  ^^^^^^^^^^

error: `specify` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:13:18
   |
13 | #[salsa::tracked(specify)]
   |                  ^^^^^^^

error: `no_eq` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:18:18
   |
18 | #[salsa::tracked(no_eq)]
   |                  ^^^^^

error: `data` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:23:18
   |
23 | #[salsa::tracked(data = Data)]
   |                  ^^^^

error: `db` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:28:18
   |
28 | #[salsa::tracked(db = Db)]
   |                  ^^

error: unrecognized option `recover_fn`
  --> tests/compile-fail/tracked_impl_incompatibles.rs:33:18
   |
33 | #[salsa::tracked(recover_fn = recover)]
   |                  ^^^^^^^^^^

error: `lru` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:38:18
   |
38 | #[salsa::tracked(lru = 32)]
   |                  ^^^

error: `constructor` option not allowed here
  --> tests/compile-fail/tracked_impl_incompatibles.rs:43:18
   |
43 | #[salsa::tracked(constructor = Constructor)]
   |                  ^^^^^^^^^^^

error: #[salsa::tracked] can only be applied to salsa structs
  --> tests/compile-fail/tracked_impl_incompatibles.rs:48:37
   |
48 | impl<'db> std::default::Default for [MyTracked<'db>; 12] {
   |                                     ^^^^^^^^^^^^^^^^^^^^
